# LiIsotopes

AnalyticTemplateParametrisation/: CMakeLists.txt  Linkdef.h  RooGaussDoubleSidedExp.C  RooGaussDoubleSidedExp.hh  RooGaussExp.C  RooGaussExp.hh  SystematicUncertainties.C  SystematicUncertainties.hh  TemplateParametrisation.C  TemplateParametrisation.C~  TemplateParametrisation.hh  TemplateParametrisation.hh~
LeptonAnalysisTools/: AnalysisSettings.C  AnalysisSettings.hh  CMakeLists.txt  CanvasTools.hh  DynamicSelector.C  DynamicSelector.hh  EcalBDTEfficiencyParameterization.hh  EffectiveMeasuringTime.C  EffectiveMeasuringTime.hh  EfficiencyTools.C  ElectronModelTwoPowerLawsWithSolarModulation.hh  EnergyScaleTree.C  LeptonTreePreselection.C  MCGeneratorTree.C  MeasuringTimeParameterization.C  MeasuringTimeParameterization.hh  PositronModelTwoPowerLawsWithSolarModulationAndExpCutoff.C  RooFitTools.C  TemplateFitTree.C  TemplateFitTree.hh  TimeTools.hh  TrdEstimatorTools.C  TrdEstimatorTools.hh
LeptonUnfoldingTools/: BayesUnfoldingWithCutoff.C  CMakeLists.txt  CompositeParameterization.hh  CrystalBallParameterization.hh  MigrationRandomGenerator.C  UnfoldingToyMc.C  UnfoldingToyMc.hh
LiTemplateFitter/: CMakeLists.txt  LithiumTemplateFitFunction.C  LithiumTemplateFitFunction.hh  LithiumTemplateFitter.C  LithiumTemplateFitter.hh
LithiumAnalysisTools/: CMakeLists.txt  DynamicSelector.C  DynamicSelector.hh  EcalBDTEfficiencyParameterization.C  EfficiencyTemplateFits.C  EfficiencyTemplateFits.hh  EfficiencyTools.hh  ElectronModelTwoPowerLawsWithSolarModulation.C  ElectronPositronDoublePowerLawApproximation.C  EnergyScaleTree.hh  FitTools.C  FitTools.hh  LeptonAnalysisTree.C  LeptonAnalysisTree.hh  LeptonTreePreselection.hh  MCGeneratorTree.hh  MagneticField.C  MagneticField.hh  NucleiAnalysisTree.C  NucleiAnalysisTree.hh  PlotTools.C  PlotTools.hh  PositronModelTwoPowerLawsWithSolarModulationAndExpCutoff.hh  PositronRatioTools.C  PositronRatioTools.hh  SelectorEfficiency.C  SelectorEfficiency.hh  SystematicUncertainties.C  SystematicUncertainties.hh
LithiumPreSelection/: CMakeLists.txt  Linkdef.h  LithiumPreSelection.C  LithiumPreSelection.hh  main.C
NucleiAnalysisSelection/: CMakeLists.txt  Linkdef.h  NucleiAnalysisSelection.C  NucleiAnalysisSelection.hh  main.C
NucleiAnalysisSelectionTagProbe/: CMakeLists.txt  Linkdef.h  NucleiAnalysisSelectionTagProbe.C  NucleiAnalysisSelectionTagProbe.hh  main.C
NucleiAnalysisTreeWriter/: CMakeLists.txt  main.C
PlotMeasuringTime/: CMakeLists.txt  PlotMeasuringTime.C  rti_cuts.cfg
